--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <body>
   <h1>some content for the header</h1>
 Hello there, awesome person!
+  <img src="https://avatars.githubusercontent.com/u/66022904?v=4">
 </body>
 
 </html>
